<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/categoriesFragment">

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.saulmaos.deliapp.ui.categories.CategoriesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_categoriesFragment_to_mealsFragment"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true"
            app:destination="@id/mealsFragment" />
        <action
            android:id="@+id/action_categoriesFragment_to_mealsDetailFragment"
            app:destination="@id/mealsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealsFragment"
        android:name="com.saulmaos.deliapp.ui.meals.MealsFragment"
        android:label="@string/meals"
        tools:layout="@layout/fragment_meals" >
        <argument
            android:name="category"
            app:argType="string"
            android:defaultValue='' />
        <action
            android:id="@+id/action_mealsFragment_to_mealsDetailFragment"
            app:destination="@id/mealsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealsDetailFragment"
        android:name="com.saulmaos.deliapp.ui.mealdetails.MealsDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_meals_detail" >
        <argument
            android:name="mealId"
            app:argType="string" />
    </fragment>
</navigation>